<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_de_fondo"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/mi_perfil"
            android:textColor="@color/naranja_principal"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etPerfilNombre"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/bt_borde_naranja"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/negro" />

        <EditText
            android:id="@+id/etPerfilApellido"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bt_borde_naranja"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/negro" />

        <EditText
            android:id="@+id/etPerfilCorreo"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bt_borde_naranja"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/negro"
            android:enabled="false"
            android:alpha="0.7"/> <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cambiar_contrase_a_opcional"
        android:textColor="@color/negro"
        android:textSize="16sp"
        android:textStyle="bold" />

        <EditText
            android:id="@+id/etPerfilContrasena"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bt_borde_naranja"
            android:hint="@string/nueva_contrase_a"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/negro" />

        <EditText
            android:id="@+id/etPerfilConfirmarContrasena"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bt_borde_naranja"
            android:hint="@string/confirma_nueva_contrase_a"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/negro" />

        <Button
            android:id="@+id/btnGuardarPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bt_borde_blanco"
            app:backgroundTint="@null"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/guardar_cambios"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:textSize="20sp" />

    </LinearLayout>
</ScrollView>