<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris_de_fondo"
    android:fillViewport="true"
    tools:context=".ui.auth.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="32dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:importantForAccessibility="no"
                android:src="@drawable/logo"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/app_name"
                android:textColor="@color/naranja_principal"
                android:textSize="50sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtRegistroTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/registro_titulo"
            android:textColor="@color/naranja_principal"
            android:textSize="32sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/bt_borde_naranja"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/negro" />

        <EditText
            android:id="@+id/etApellido"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bt_borde_naranja"
            android:hint="@string/apellido"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/negro" />

        <EditText
            android:id="@+id/etCorreoReg"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bt_borde_naranja"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/negro" />

        <EditText
            android:id="@+id/etContrasenaReg"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bt_borde_naranja"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/negro" />

        <EditText
            android:id="@+id/etConfirmarContrasena"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bt_borde_naranja"
            android:hint="@string/repite_contrasena"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/negro" />

        <CheckBox
            android:id="@+id/cbTerminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/acepto_terminos"
            android:textColor="@color/negro"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/bt_borde_blanco"
            app:backgroundTint="@null"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/registrarse_btn"
            android:textAllCaps="false"
            android:textColor="@color/blanco"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ya_tienes_cuenta"
                android:textColor="@color/negro"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtIniciaSesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/inicia_sesion"
                android:textColor="@color/naranja_principal"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
